assets/main.scss
---
---

@import "minima";
@import "_ibm-plex-sans";

html, body {
  font-family: 'IBM Plex Sans', "Gotham", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #222222;
  -webkit-font-smoothing: antialiased;
  background-color: #fdfbf4;
}

.site-footer {
  background-color: #1d1d1d;
  color: #e7e7e7;
  padding: 2.5rem 0;
}

.site-header {
  border-top: 3px solid #000000;
  padding-top: 10px;
  background-color: #1d1d1d;
}

.site-title, .site-title:visited {
  font-family: 'IBM Plex Sans';
  font-weight: 500;
  font-size: 28px;
  letter-spacing: normal;
  color: #e7e7e7;
  display: flex;
  align-items: center;
  gap: 10px;
}

.site-logo {
  height: 32px;
  width: 32px;
  display: inline-block;
  vertical-align: middle;
  margin-right: 8px;
}

// .site-title::before {
//   // content: url("logo.png");
//   display: inline-block;
//   position: relative;
//   margin-right: 25px;
//   width: 50px;
//   height: 50px;
// }

a, a:visited {
  color: #a3a3a3;
  transition: color 0.25s ease-in-out;
}

a.post-link {
  font-size: 23px;
  font-weight: 500;
  line-height: 1.2;
  color: #222222;
}

.site-nav .page-link {
  color: #666666;
}

a:hover, a.page-link:hover  {
  color: #533e33;
  text-decoration: none;
}

pre, code {
  background-color: #fff8f8;
  font-size: 14px;
  border: 1px solid #ffe8e8;
}

.post-title {
  font-family: 'IBM Plex Sans', 'Gotham', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color: #252525;
  font-size: 48px;
  line-height: 1.2;
  font-weight: 500;
}

.post-content p {
  color: #222222;
}

.author-name {
  display: flex;
  align-items: center;
  gap: 8px;
  margin: 0;
}

.about-author {
  border-top: 1px solid #e8e8e8;
  margin-top: 25px;
  padding-top: 25px;
}

.author-image-block {
  float:left;
  margin-right: 25px;
}

.author-image {
  height: 100px;
  width: 100px;
  border-radius: 50%;
}

.author-description {
  font-size: 15px;
  color: #828282;
}

.contact-list li + li {
    padding-top: 5px;
}

@font-face {
  font-family: 'Gotham';
  src: url('fonts/GothamBook.woff2') format("woff2"), url('fonts/GothamBook.woff') format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Gotham';
  src: url('fonts/GothamMedium.woff2') format("woff2"), url('fonts/GothamMedium.woff') format("woff");
  font-weight: 500;
  font-style: normal;
}

.language-selector {
  display: block;
  margin-left: 20px;
  
  .language {
    margin: 0 5px;
    padding: 3px 8px;
    border-radius: 3px;
    font-size: 14px;
    
    &.active {
      font-weight: bold;
      color: #533e33;
    }
  }
}

.post-list-heading {
  font-size: 2.5rem;
  font-weight: bold;
}

.post-list {
  list-style: none;
  padding: 0;
  margin: 3rem 0;

  .post-card {
    background: #fafafa;
    border: 1px solid #eee;
    border-radius: 10px;
    padding: 1.75rem 2rem;
    margin-bottom: 2rem;
    border-left: 5px solid #252525;
    transition: box-shadow 0.2s ease, transform 0.2s ease;

    &:hover {
      box-shadow: 0 10px 25px #0000000d;
      transform: translateY(-2px);
    }

    .post-date {
      font-size: 0.85rem;
      color: #888;
      display: block;
      margin-bottom: 0.5rem;
    }

    .post-title {
      margin: 0 0 0.75rem;
      font-size: 1.4rem;
      line-height: 1.3;
      transition: color 0.2s;
    }

    &:hover .post-title {
      color: #533e33;
    }

    .post-excerpt {
      font-size: 1rem;
      line-height: 1.65;
      color: #444;
      margin-bottom: 1rem;
    }

    .read-more {
      font-size: 0.9rem;
      font-weight: 500;
      color: #533e33;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }
  }
}

.footer-heading {
  display: flex;
  margin: auto auto 0;
  font-size: 10px;
}

@include media-query($on-palm) {
  .site-nav .menu-icon {
    display: flex;
    float: right;
    width: 36px;
    height: 17px;
    padding-top: 10px;

    justify-content: center;
    align-items: center;
    text-align: center;
  }
    .post-list-heading {
    font-size: 2rem;
    text-align: left;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
    .footer-heading{
      margin: 1.5rem auto 0;
      justify-content: center;
      text-align: center;
    }
}

